NetExplorer/static/css/style.css
/* ... */
.reducedDims-container {
  width: 100%;
}

.perplexity-container {
  width: 100%;
}

.slider.slider-horizontal{
  width:100% !important; /* sample value - set it as you like*/
}

.card-overlay-netcell-aboutexp .slider-handle {
    background-color: red !important;
    background-image: linear-gradient(to bottom, #FDD4D4, #d9534f) !important;
}

.plot-btn-container {
  display: flex;
  align-items: center;
}

 #plot-btn {
   width: 70%;
   height: 5%;
   margin-left: 15%;

 }

 #tsne-plot {
   width: 75%;
   height: 85%;
   margin-left: 12.5%;
 }

.tsne-plot-container {
  display: flex;
  align-items: center;
}


.colored-by {
  display: none;
  text-align: center;
}

